--- a/pkifmm/makefile.this_machine
+++ b/pkifmm/makefile.this_machine
@@ -3,23 +3,27 @@
 #
 # 
 
-OPENMP_LIB=
+OPENMP_LIB= -fopenmp
+CPPFLAFGS+= -fopenmp     # gcc compiler change accoringly
+
+#OPENMP_LIB=
 #CPPFLAFGS+= -openmp
 CPPFLAGS += -DUSE_SSE
 
-CFLAGS = -DPETSC_USE_LOG
+CFLAGS = -DPETSC_USE_LOG -fopenmp
 FFLAGS =
 CPPFLAGS =  -I.. ${FFTW_INCLUDE} -I${DENDRO_DIR}/include/oct  \
             -I${DENDRO_DIR}/include/point -I${DENDRO_DIR}/include \
             -I${DENDRO_DIR}/include/par -I${DENDRO_DIR}/include/binOps \
-            -I${DENDRO_DIR}/include/seq
-CFLAGS = -DPETSC_USE_LOG
+            -I${DENDRO_DIR}/include/seq -I${FFTW_DIR}/api
+
+CFLAGS = -DPETSC_USE_LOG -fopenmp
 FPPFLAGS =
 FFLAGS =
-FFTW_LIB=-L${FFTW_DIR}/lib -lfftw3
+FFTW_LIB=-L${FFTW_DIR}/.libs -lfftw3
 FFTW_INCLUDE=-I${FFTW_DIR}/include
 
-LIBS = ${FFTW_LIB} -L${DENDRO_DIR}/lib -lOct -lPar -lBinOps -lSys -lPC ${OPENMP_LIB}
+LIBS = -L${FFTW_DIR}/.libs ${FFTW_LIB} -L${DENDRO_DIR}/lib -lOct -lPar -lBinOps -lSys -lPC ${OPENMP_LIB}
 AR = ar
 ARFLAGS = -r
 RANLIB = ranlib
@@ -30,7 +34,7 @@ include ${PETSC_DIR}/conf/base
 
 %.d: %.cpp
 	@set -e; rm -f $@; \
-	  ${PCC} -MM ${PCC_FLAGS} ${CFLAGS} ${CCPPFLAGS} $< > $@.$$$$; \
+	  ${PCC} -fopenmp -MM ${PCC_FLAGS} ${CFLAGS} ${CCPPFLAGS} $< > $@.$$$$; \
 	  sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
 	  rm -f $@.$$$$
 
